Kubernetes/IngressController/DefaultBackend/ingress_path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path
  labels:
    name: ingress-path
  annotation:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  IngressClassName: nginx
  rules:
    http:
      paths:
      - pathType: Prefix
        path: "/blue"
        backend:
          service:
            name: web-blue
            port: 
              number: 80
      - pathType: Prefix
        path: "/green"
        backend:
          service:
            name: web-green
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingres-default
  labels:
    name: ingres-default
spec:
  IngressClassName: nginx
  defaultBackend:
    service:
      name: nginx
      port: 
        number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dominio
  labels:
    name: ingress-dominio
  annotation:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: color.127.0.0.1.nip.io
      http:
        paths:
        - pathType: Prefix
          path: "/blue"
          backend:
            service:
              name: web-blue
              port: 
                number: 80
        - pathType: Prefix
          path: "/blue"
          backend:
            service:
              name: web-blue
              port: 
                number: 80
    - host: color.127.0.0.1.nip.io
      http:
        paths:
        - pathType: Prefix
          path: "/green"
          backend:
            service:
              name: web-green
              port: 
                number: 80
